agregue un parrafo y un h2

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Git Page</h1>
+    <h2>git page</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quos, facere enim voluptatibus qui incidunt. Ipsa veritatis tempora cupiditate. Voluptatem libero officia sed repudiandae. In similique nulla atque eum provident!</p>
 </body>
 </html>
