--- a/index.html
+++ b/index.html
@@ -17,6 +17,49 @@
 
 <body>
 
+  
+  <!-- BARRA DE NAVEGACION -->
+
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand logo" href="index.html">JZ</a>
+      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mx-auto text-end">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portafolio.html">Portafolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+<!-- ENCABEZADO -->
+
+  <div class="site-blocks-cover overlay aos-init aos-animate" style="background-image: url('assets/imgs/header.jpg');background-position: 50% -25px;" data-aos="fade" data-stellar-background-ratio="0.5" id="home-section">
+  <div class="container">
+    <div class="row align-items-center justify-content-center text-center">
+      <div class="col-lg-8">
+        <h1 class="text-white aos-init aos-animate" data-aos="fade-up" data-aos-delay="0">
+          Jesus Zuñiga<br>
+          Estudiante de Front-End
+        </h1>
+      </div>
+    </div>
+  </div>
+</div>
+
+  
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
