--- a/index.html
+++ b/index.html
@@ -58,7 +58,70 @@
   </div>
 </div>
 
-  
+  <!-- SECCION BIOGRAFIA -->
+
+  <section id="biografia" class="m-5">
+    <div class="container">
+      <div class="row mb-5 align-item-center">
+        <div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0">
+          <div class="img-bio">
+            <img class="img-fluid" src="/assets/imgs/biografia.jpg" alt="biografia Jesus" />
+          </div>
+        </div>
+        <div class="col-lg-5 pl-lg-5">
+          <div class="section-heading">
+            <h2>Mi Biografia</h2>
+          </div>
+          <p>
+            Se considera una persona responsable con sus labores, le gusta la puntualidad, el trabajar en equipo, buenos conocimientos en sistemas de computación como formatear computadores, instalación de sistema operativo e instalación de antivirus, también tiene competencia en servicio al cliente. Está dispuesto a colaborar al máximo con la empresa para cumplir las metas.
+          </p>
+          <p>
+            Me gusta viajar, descubrir sitios nuevos, ir con mi familia de viaje. Me gusta mucho los juegos de atracciones e ir a cine, tambien me gusta escuchar musica, ver series.
+          </p>
+          <div class="my-5">            
+            <div class="skill">
+              <h3>HTML5</h3>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 94%" aria-valuenow="98" aria-valuemin="0"
+                  aria-valuemax="100">
+                  <span>94%</span>
+                </div>
+              </div>
+            </div>
+            <div class="skill">
+              <h3>CSS3</h3>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 45%" aria-valuenow="97" aria-valuemin="0"
+                  aria-valuemax="100">
+                  <span>45%</span>
+                </div>
+              </div>
+            </div>
+            <div class="skill">
+              <h3>WordPress</h3>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="88" aria-valuemin="0"
+                  aria-valuemax="100">
+                  <span>65%</span>
+                </div>
+              </div>
+            </div>
+            <div class="skill">
+              <h3>Bootstrap</h3>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="92" aria-valuemin="0"
+                  aria-valuemax="100">
+                  <span>25%</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
