--- a/index.html
+++ b/index.html
@@ -490,6 +490,54 @@
   </section>
 
 
+  <!-- SECCION PIE DE PAGINA -->
+
+  <footer class="footer-site">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="widget">
+            <h3>Redes Sociales</h3>
+            <ul class="list-unstyled social">
+              <li>
+                <a href="https://www.instagram.com/jesuseliecer89/" target="_blank"><span><img src="/assets/imgs/instagram.svg" alt="instagram"></span></a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/Jesuseliecer89/" target="_blank"><span><img src="/assets/imgs/facebook.svg" alt="facebook"></span></a>
+              </li>
+              <li>
+                <a href="https://x.com/jesuseliecer89" target="_blank"><span><img src="/assets/imgs/twitter.svg" alt="X"></span></a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/in/jesus-eliecer-zu%C3%B1iga/" target="_blank"><span><img src="/assets/imgs/linkedin.svg" alt="linkedin"></span></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-4 ms-auto">
+          <div class="widget">
+            <h3>Navegacion</h3>
+            <ul class="list-unstyled float-start links">
+              <li><a href="index.html">Inicio</a></li>
+              <li><a href="#experiencia">Experiencia Laboral</a></li>
+              <li><a href="#educacion">Estudios</a></li>
+              <li><a href="portafolio.html">Portafolio</a></li>
+              <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-4 widget">
+          <h3>Contacto</h3>
+          <address>Calle 8 21-43</address>
+          <ul class="list-unstyled links mb-4">
+            <li><a href="tel://573164301720">+57(316)-430-1720</a></li>
+              <a href="mailto:jesuseliecer89@gmail.com">jesuseliecer89@gmail.com</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
