add: section form

--- a/contacto.html
+++ b/contacto.html
@@ -54,6 +54,26 @@
     </div>
   </div>
 
+  <!-- SECCION DE FORMULARIO DE CONTACTO -->
+
+  <form class="m-5">
+    <h2 class="text-center p-5">Deja Tu Mensaje y nos pondremos en contacto contigo</h2>
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">Correo Electronico</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    </div>
+    <div class="input-group mb-5">
+      <span class="input-group-text">Nombre Y Apellidos</span>
+      <input type="text" aria-label="First name" class="form-control">
+      <input type="text" aria-label="Last name" class="form-control">
+    </div>
+    <div class="input-group">
+      <span class="input-group-text">Escriba <br>Tu Mensaje</span>
+      <textarea class="form-control" aria-label="With textarea"></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary m-2 d-block mx-auto">Enviar</button>
+  </form>
+
   <!-- PIE DE PAGINA -->
 
   <footer class="footer-site">
