add: section portafolio

--- a/portafolio.html
+++ b/portafolio.html
@@ -50,7 +50,46 @@
   </div>
 </div>
 
+<!-- SECCION DE TRABAJOS REALIZADOS -->
 
+<section class="m-5">
+  <div class="container">
+    <div class="row">
+      <div class="card col m-3" style="width: 18rem;">
+        <img src="assets/imgs/desafio1.png" style="height: 15rem;" class="card-img-top mt-3" alt="desafio 1">
+        <div class="card-body">
+          <p class="card-text">Primer trabajo realizado con solo html para presentar el desafio #1 para la el Bootcamp Desafio Latam.</p>
+        </div>
+      </div>
+      <div class="card col m-3" style="width: 18rem;">
+        <img src="assets/imgs/desafio2.png" style="height: 15rem;" class="card-img-top mt-3" alt="Desafio 2">
+        <div class="card-body">
+          <p class="card-text">Segundo trabajo realizar con html y css para presentar el desafio #2 para el Bootcamp Desafio Latam.</p>
+        </div>
+      </div>
+      <div class="card col m-3" style="width: 18rem;">
+        <img src="assets/imgs/desafio3.png" style="height: 15rem;" class="card-img-top mt-3" alt="Desafio 2">
+        <div class="card-body">
+          <p class="card-text">Tercer trabajo realizar con html y css con una maquetacion de guia landig page para presentar el desafio #3 para el Bootcamp Desafio Latam.</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="card col m-3" style="width: 18rem;">
+        <img src="assets/imgs/desafio4.png" style="height: 15rem;" class="card-img-top mt-3" alt="Desafio 2">
+        <div class="card-body">
+          <p class="card-text">Cuarto trabajo realizar con html y css y bootstrap de un sistema de cupones para presentar el desafio #4 para el Bootcamp Desafio Latam.</p>
+        </div>
+      </div>
+      <div class="card col m-3" style="width: 18rem;">
+        <img src="assets/imgs/desafio5.png" style="height: 15rem;" class="card-img-top mt-3" alt="Desafio 2">
+        <div class="card-body">
+          <p class="card-text">Quinto trabajo realizar con html y css y bootstrap de un curriculum personal para presentar el desafio #5 para el Bootcamp Desafio Latam.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- PIE DE PAGINA -->
 
