--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="row mb-5 align-item-center">
         <div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0">
           <div class="img-bio">
-            <img class="img-fluid" src="/assets/imgs/biografia.jpg" alt="biografia Jesus" />
+            <img class="img-fluid" src="assets/imgs/biografia.jpg" alt="biografia Jesus" />
           </div>
         </div>
         <div class="col-lg-5 pl-lg-5">
@@ -500,16 +500,16 @@
             <h3>Redes Sociales</h3>
             <ul class="list-unstyled social">
               <li>
-                <a href="https://www.instagram.com/jesuseliecer89/" target="_blank"><span><img src="/assets/imgs/instagram.svg" alt="instagram"></span></a>
+                <a href="https://www.instagram.com/jesuseliecer89/" target="_blank"><span><img src="assets/imgs/instagram.svg" alt="instagram"></span></a>
               </li>
               <li>
-                <a href="https://www.facebook.com/Jesuseliecer89/" target="_blank"><span><img src="/assets/imgs/facebook.svg" alt="facebook"></span></a>
+                <a href="https://www.facebook.com/Jesuseliecer89/" target="_blank"><span><img src="assets/imgs/facebook.svg" alt="facebook"></span></a>
               </li>
               <li>
-                <a href="https://x.com/jesuseliecer89" target="_blank"><span><img src="/assets/imgs/twitter.svg" alt="X"></span></a>
+                <a href="https://x.com/jesuseliecer89" target="_blank"><span><img src="assets/imgs/twitter.svg" alt="X"></span></a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/in/jesus-eliecer-zu%C3%B1iga/" target="_blank"><span><img src="/assets/imgs/linkedin.svg" alt="linkedin"></span></a>
+                <a href="https://www.linkedin.com/in/jesus-eliecer-zu%C3%B1iga/" target="_blank"><span><img src="assets/imgs/linkedin.svg" alt="linkedin"></span></a>
               </li>
             </ul>
           </div>
