update page contacto

--- a/contacto.html
+++ b/contacto.html
@@ -84,16 +84,16 @@
             <h3>Redes Sociales</h3>
             <ul class="list-unstyled social">
               <li>
-                <a href="https://www.instagram.com/jesuseliecer89/" target="_blank"><span><img src="/assets/imgs/instagram.svg" alt="instagram"></span></a>
+                <a href="https://www.instagram.com/jesuseliecer89/" target="_blank"><span><img src="assets/imgs/instagram.svg" alt="instagram"></span></a>
               </li>
               <li>
-                <a href="https://www.facebook.com/Jesuseliecer89/" target="_blank"><span><img src="/assets/imgs/facebook.svg" alt="facebook"></span></a>
+                <a href="https://www.facebook.com/Jesuseliecer89/" target="_blank"><span><img src="assets/imgs/facebook.svg" alt="facebook"></span></a>
               </li>
               <li>
-                <a href="https://x.com/jesuseliecer89" target="_blank"><span><img src="/assets/imgs/twitter.svg" alt="X"></span></a>
+                <a href="https://x.com/jesuseliecer89" target="_blank"><span><img src="assets/imgs/twitter.svg" alt="X"></span></a>
               </li>
               <li>
-                <a href="https://www.linkedin.com/in/jesus-eliecer-zu%C3%B1iga/" target="_blank"><span><img src="/assets/imgs/linkedin.svg" alt="linkedin"></span></a>
+                <a href="https://www.linkedin.com/in/jesus-eliecer-zu%C3%B1iga/" target="_blank"><span><img src="assets/imgs/linkedin.svg" alt="linkedin"></span></a>
               </li>
             </ul>
           </div>
