--- a/contacto.html
+++ b/contacto.html
@@ -63,7 +63,7 @@
   <!-- SECCION DE FORMULARIO DE CONTACTO -->
 
   <form class="m-5">
-    <h2 class="text-center p-5">Deja Tu Mensaje y nos pondremos en contacto contigo</h2>
+    <h2 class="text-center p-5">Deja tu mensaje y nos pondremos en contacto contigo</h2>
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">Correo Electronico</label>
       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
